Normalize line endings
